--- a/app/views/ailments/_form.html.erb
+++ b/app/views/ailments/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+  <div class="field">
+    <%= f.label :specialty %><br>
+    <%= f.collection_select :specialty_id, Specialty.all, :id, :name %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
