--- a/app/views/ailments/show.html.erb
+++ b/app/views/ailments/show.html.erb
@@ -5,5 +5,10 @@
   <%= @ailment.name %>
 </p>
 
+<p>
+  <strong>Associated Specialty:</strong>
+  <%= @ailment.specialty.name %>
+</p>
+
 <%= link_to 'Edit', edit_ailment_path(@ailment) %> |
 <%= link_to 'Back', ailments_path %>
