--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -6,5 +6,24 @@
 
 <%= render partial: "shared/show_person", locals: { person: @patient} %>
 
+<strong>Appointments:</strong>
+<table>
+  <thead>
+    <tr>
+      <th>Doctor</th>
+      <th>Time</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody id="patient-appointments">
+    <%= render @patient.appointments %>
+  </tbody>
+</table><br>
+
+<div id="new-patient-appointment">
+  <%= render partial: 'appointments/form', locals: {patient: @patient, appointment: Appointment.new } %>
+</div>
+
 <%= link_to 'Edit', edit_patient_path(@patient) %> |
 <%= link_to 'Back', patients_path %>
