--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -15,9 +15,10 @@
   <tbody>
     <% @appointments.each do |appointment| %>
       <tr>
-        <td><%= appointment.patient %></td>
-        <td><%= appointment.doctor %></td>
+        <td><%= appointment.patient.name %></td>
+        <td><%= appointment.doctor.name %></td>
         <td><%= appointment.date.to_s %></td>
+        <td><%= link_to 'Details', appointment %></td>
         <td><%= link_to 'Delete', appointment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
