Add directiosn to embeded map

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+<p>
+  <%= link_to 'Home', root_url %> | <%= link_to 'Patients', patients_url %> | <%= link_to 'Doctors', doctors_url %>
+</p>
 
 <%= yield %>
 
