Change display of appointment date across application

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -11,7 +11,7 @@
 
 <p id="patient-appointment-date">
   <strong>Date:</strong>
-  <%= @appointment.date.to_s %>
+  <%= human_readable_date(@appointment.date) %>
 </p>
 
 <iframe
