--- a/app/views/appointments/update.js.erb
+++ b/app/views/appointments/update.js.erb
@@ -1,5 +1,5 @@
 $('#change-appointment-date').html('<%= j render(partial: "change_date_form") %>');
 $('#appointment_date').datetimepicker({dateFormat: "yy-mm-dd", timeFormat: "h:mm TT"});
 <% unless @appointment.errors.any? %>
-  $('#patient-appointment-date').html('<strong>Date:</strong><%= @appointment.date.to_s %>');
+  $('#patient-appointment-date').html('<strong>Date:</strong><%= human_readable_date(@appointment.date) %>');
 <% end %>
