--- a/app/views/appointment_mailer/doctor_new_appointment.html.erb
+++ b/app/views/appointment_mailer/doctor_new_appointment.html.erb
@@ -2,7 +2,7 @@ Dear <%= @doctor.name %>,
 
 You have a new apointment scheduled with <%=  @patient.name %>.
 
-Date: <%= @appointment.date.to_s %>
+Date: <%= human_readable_date(@appointment.date) %>
 Location: <%=  @doctor.full_street_address %>
 
 Remember to wash your hands before and after any patient contact!
