--- a/app/views/appointment_mailer/patient_new_appointment.html.erb
+++ b/app/views/appointment_mailer/patient_new_appointment.html.erb
@@ -2,7 +2,7 @@ Dear <%= @patient.name %>,
 
 You have a new apointment scheduled with <%=  @doctor.name %>.
 
-Date: <%= @appointment.date.to_s %>
+Date: <%= human_readable_date(@appointment.date) %>
 Location: <%=  @doctor.full_street_address %>
 
 Please arrive 15 minutes prior to schedule appointment time.
