--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= appointment.patient.name %></td>
         <td><%= appointment.doctor.name %></td>
-        <td><%= appointment.date.to_s %></td>
+        <td><%= human_readable_date(appointment.date) %></td>
         <td><%= link_to 'Details', appointment %></td>
         <td><%= link_to 'Delete', appointment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
