--- a/app/views/appointments/create.js.erb
+++ b/app/views/appointments/create.js.erb
@@ -4,7 +4,7 @@
 <% else %>
   $('#patient-appointments').append('<%= j render(@appointment) %>');
   var error_div = $('#error_explanation')
-  if (error_div) {
+  if (error_div.length) {
     error_div.remove();
     $("label[for='appointment_date']").unwrap();
     $('#appointment_date').unwrap();
