Move patient model to user and rolify

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -26,4 +26,4 @@
 <div id="change-appointment-date">
   <%= render 'change_date_form' %>
 </div>
-<%= link_to 'Back', patient_path(@appointment.patient) %>
+<%= link_to 'Back', user_path(@appointment.patient) %>
