--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <%= link_to 'Home', root_url %> |
-  <%= link_to 'Patients', patients_url %> |
+  <%= link_to 'Patients', users_url %> |
   <%= link_to 'Doctors', doctors_url %> |
   <%= link_to 'Ailments', ailments_url %> |
   <%= link_to 'Specialty', specialties_url %>
