--- a/app/views/appointments/create.js.erb
+++ b/app/views/appointments/create.js.erb
@@ -1,5 +1,5 @@
 <% if @appointment.errors.any? %>
-  $('#new-patient-appointment').html('<%= j render(partial: "appointments/form", locals: {patient: @patient, appointment: @appointment}) %>');
+  $('#new-patient-appointment').html('<%= j render(partial: "appointments/form", locals: {patient: @user, appointment: @appointment}) %>');
   $('#appointment_date').datetimepicker({dateFormat: "yy-mm-dd", timeFormat: "h:mm TT"});
 <% else %>
   $('#patient-appointments').append('<%= j render(@appointment) %>');
