Move doctor model to user

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -14,7 +14,7 @@
 
   <div class="field">
     <%= f.label :doctor %><br>
-    <%= f.collection_select :doctor_id, Doctor.near(@user.full_street_address, 10).patient_doctors(@user), :id, :name_and_specialties %>
+    <%= f.collection_select :doctor_id, User.with_role(:doctor).near(@user.full_street_address, 10).patient_doctors(@user), :id, :name_and_specialties %>
   </div>
   <div class="field">
     <%= f.label :date %><br>
