--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <%= render partial: "shared/person_form", locals: { form: f, person: @user } %>
+  <%= render partial: "shared/person_form", locals: { form: f, person: resource } %>
 
   <div class="field">
     <%= f.label :password %>
