--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,7 @@
 </head>
 <body>
 
-<p>
-  <%= link_to 'Home', root_url %> |
-  <%= link_to 'Patients', users_url %> |
-  <%= link_to 'Doctors', users_url %> |
-  <%= link_to 'Ailments', ailments_url %> |
-  <%= link_to 'Specialty', specialties_url %>
-</p>
+<%= render partial: 'layouts/topnav' %>
 
 <%= yield %>
 
