--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,47 +6,49 @@
 
 <%= render partial: "shared/show_person", locals: { person: @user} %>
 
-<% if @user.has_role? :doctor %>
-  <strong>Patient Appointments:</strong>
-  <table>
-    <thead>
-      <tr>
-        <th>Patient</th>
-        <th>Time</th>
-        <th colspan="2"></th>
-      </tr>
-    </thead>
+<% if (@user == current_user) || current_user.has_role?(:admin) %>
+  <% if @user.has_role? :doctor %>
+    <strong>Patient Appointments:</strong>
+    <table>
+      <thead>
+        <tr>
+          <th>Patient</th>
+          <th>Time</th>
+          <th colspan="2"></th>
+        </tr>
+      </thead>
 
-    <tbody id="patient-appointments">
-      <% @user.patient_appointments.each do |patient_appointment| %>
-        <%= render partial: 'appointments/patient_appointment', object: patient_appointment %>
-      <% end %>
-    </tbody>
-  </table><br>
+      <tbody id="patient-appointments">
+        <% @user.patient_appointments.each do |patient_appointment| %>
+          <%= render partial: 'appointments/patient_appointment', object: patient_appointment %>
+        <% end %>
+      </tbody>
+    </table><br>
+  <% end %>
+
+  <% if @user.has_role? :patient %>
+    <strong>Doctor Appointments:</strong>
+    <table>
+      <thead>
+        <tr>
+          <th>Doctor</th>
+          <th>Time</th>
+          <th colspan="2"></th>
+        </tr>
+      </thead>
+
+      <tbody id="doctor-appointments">
+        <% @user.doctor_appointments.each do |doctor_appointment| %>
+          <%= render partial: 'appointments/doctor_appointment', object: doctor_appointment %>
+        <% end %>
+      </tbody>
+    </table><br>
+
+    <div id="new-patient-appointment">
+      <%= render partial: 'appointments/form', locals: {patient: @user, appointment: Appointment.new } %>
+    </div>
+  <% end %>
+
+  <%= link_to 'Edit', edit_user_registration_path(@user) %> |
 <% end %>
-
-<% if @user.has_role? :patient %>
-  <strong>Doctor Appointments:</strong>
-  <table>
-    <thead>
-      <tr>
-        <th>Doctor</th>
-        <th>Time</th>
-        <th colspan="2"></th>
-      </tr>
-    </thead>
-
-    <tbody id="doctor-appointments">
-      <% @user.doctor_appointments.each do |doctor_appointment| %>
-        <%= render partial: 'appointments/doctor_appointment', object: doctor_appointment %>
-      <% end %>
-    </tbody>
-  </table><br>
-
-  <div id="new-patient-appointment">
-    <%= render partial: 'appointments/form', locals: {patient: @user, appointment: Appointment.new } %>
-  </div>
-<% end %>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
