--- a/app/views/ailments/index.html.erb
+++ b/app/views/ailments/index.html.erb
@@ -15,8 +15,10 @@
       <tr>
         <td><%= ailment.name %></td>
         <td><%= link_to 'Show', ailment %></td>
-        <td><%= link_to 'Edit', edit_ailment_path(ailment) %></td>
-        <td><%= link_to 'Destroy', ailment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.has_role? :admin %>
+          <td><%= link_to 'Edit', edit_ailment_path(ailment) %></td>
+          <td><%= link_to 'Destroy', ailment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
