--- a/app/views/specialties/index.html.erb
+++ b/app/views/specialties/index.html.erb
@@ -15,8 +15,10 @@
       <tr>
         <td><%= specialty.name %></td>
         <td><%= link_to 'Show', specialty %></td>
-        <td><%= link_to 'Edit', edit_specialty_path(specialty) %></td>
-        <td><%= link_to 'Destroy', specialty, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.has_role? :admin %>
+          <td><%= link_to 'Edit', edit_specialty_path(specialty) %></td>
+          <td><%= link_to 'Destroy', specialty, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
