--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,8 +24,10 @@
         <td><%= user.city %></td>
         <td><%= user.state_name %></td>
         <td><%= user.zip %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.has_role? :admin %>
+          <td><%= link_to 'Edit', edit_user_path(user) %></td>
+          <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
