--- a/app/views/layouts/_topnav.html.erb
+++ b/app/views/layouts/_topnav.html.erb
@@ -1,8 +1,7 @@
 <p>
-  <%= link_to 'Home', root_url %>
+  <%= link_to 'Home', current_user ? user_path(current_user) : new_user_session_path %>
   <% if user_signed_in? %>
-    |<%= link_to 'Patients', users_url %> |
-    <%= link_to 'Doctors', users_url %> |
+    | <%= link_to current_user.has_role?(:admin) ? 'Users' : 'Doctors', users_url %> |
     <%= link_to 'Ailments', ailments_url %> |
     <%= link_to 'Specialty', specialties_url %> |
     <%= link_to current_user.email, edit_user_registration_path, title: "Account" %> |
