--- a/app/views/appointment_mailer/patient_new_appointment.html.erb
+++ b/app/views/appointment_mailer/patient_new_appointment.html.erb
@@ -3,7 +3,7 @@ Dear <%= @patient.name %>,
 You have a new apointment scheduled with <%=  @doctor.name %>.
 
 Date: <%= human_readable_date(@appointment.date) %>
-Location: <%=  @doctor.full_street_address %>
+Location: <%= Address.business_for(@doctor).full_street_address %>
 
 Please arrive 15 minutes prior to schedule appointment time.
 
