Provide address instance variables in appointments controllers

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -19,8 +19,8 @@
   height="450"
   frameborder="0" style="border:0"
   src='https://www.google.com/maps/embed/v1/directions?key=AIzaSyAwwYeJl12ZnOERXKSnIUeTsNbqhaL78FE
-    &origin=<%= "#{@appointment.patient.latitude},#{@appointment.patient.longitude}" %>
-    &destination=<%= "#{@appointment.doctor.latitude},#{@appointment.doctor.longitude}" %>' allowfullscreen>
+    &origin=<%= "#{@patient_address.latitude},#{@patient_address.longitude}" %>
+    &destination=<%= "#{@doctor_address.latitude},#{@doctor_address.longitude}" %>' allowfullscreen>
 </iframe><br><br>
 
 <div id="change-appointment-date">
