--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   <%= @user.name %>
 </h1>
 
-<%= link_to 'Edit', edit_user_registration_path(@user) if ((@user == current_user) || current_user.has_role?(:admin)) %>
+<%= link_to 'Edit', edit_user_registration_path(@user) if @user == current_user %>
 
 <p>
   <strong>Email:</strong>
