Remove remaining refernces to person and redundant devise views

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,5 +11,5 @@
     </div>
   <% end %>
 
-  <%= render partial: "shared/person_form", locals: { form: f, person: @user } %>
+  <%= render partial: "users/user_attributes_form", locals: { form: f, user: @user } %>
 <% end %>
