Change name of app to appointmenter

--- a/app/views/appointment_mailer/doctor_new_appointment.html.erb
+++ b/app/views/appointment_mailer/doctor_new_appointment.html.erb
@@ -7,4 +7,4 @@ Location: <%=  @doctor.full_street_address %>
 
 Remember to wash your hands before and after any patient contact!
 
-Team Spreemo
+Team Appointmenter
