--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
       <th>Name</th>
       <th>Email</th>
       <th>Address</th>
-      <th colspan="2"></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -20,6 +20,9 @@
         <td><%= address.full_street_address %></td>
         <% if current_user.has_role? :admin %>
           <td><%= link_to 'Edit', edit_user_path(user) %></td>
+          <% if user.unconfirmed_doctor? %>
+            <td><%= link_to 'Confirm Doctor', user_confirm_doctor_path(user), method: :post, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
           <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
