--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
   <%= @user.email %>
 </p>
 
-<% if (@user == current_user) || current_user.has_role?(:admin) %>
-  <%= render partial: "addresses/home", locals: { address: Address.home_for(@user)} %>
+<% if @user.has_role?(:patient) && (@user == current_user || current_user.has_role?(:admin)) %>
+  <%= render partial: "addresses/home", locals: { address: Address.home_for(@user) } %>
   <% if @user.ailments.any? %>
     <strong>Ailments:</strong>
     <ul>
@@ -49,7 +49,7 @@
   </table><br>
 <% end %>
 
-<% if current_user.has_role?(:admin) || ((@user == current_user) && @user.has_role?(:patient)) %>
+<% if @user.has_role?(:patient) && (current_user.has_role?(:admin) || @user == current_user) %>
   <strong>Doctor Appointments:</strong>
   <table>
     <thead>
